<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 测试数据 -->
    <string name="str_zero">0</string>
    <string name="str_plus_1">+1</string>
    <string name="str_user_name">第一菜鸟</string>

    <!--  -->
    <string name="app_name">Us 4 Sina</string>
    <string name="send_status">发送微博</string>
    <string name="fans_cat">全部分类</string>
    <string name="hint_status">请输入微博文字(140字以内)</string>
    <!--  -->
    <string name="tlt_account_info">详细资料</string>
    <string name="tlt_settings">个性设置</string>
    <string name="tlt_account_preview">个人中心</string>
    <string name="tlt_pineduser">PinedUser</string>
    <string name="tlt_choose_pineduser">添加关注</string>
    <!-- hints -->
    <string name="hint_username">请输入要搜索的用户昵称</string>

    <!-- 账户详细 -->
    <string name="edit">编辑</string>
    <string name="attention">添加关注</string>
    <string name="unattention">取消关注</string>
    <string name="friends">关注</string>
    <string name="followers">粉丝</string>
    <string name="statuses">微博</string>
    <string name="favourites">收藏</string>
    <string name="address">地址: </string>
    <string name="description">简介: </string>

    <!--  -->
    <string name="search">搜索</string>

</resources>