<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/choose_pineduser_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar_bg_nor"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/choose_pineduser_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/choose_pineduser_title"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:contentDescription="@null"
            android:gravity="center"
            android:text="@string/tlt_choose_pineduser"
            android:textColor="#000" />

        <ImageButton
            android:id="@+id/choose_pineduser_btn_search"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="false"
            android:contentDescription="@null"
            android:src="@drawable/selector_btn_search"
            android:visibility="invisible" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/choose_pineduser_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/choose_pineduser_radio_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_radiobutton_choose_pineduser"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/friends" />

        <RadioButton
            android:id="@+id/choose_pineduser_radio_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_radiobutton_choose_pineduser"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/followers" />

        <RadioButton
            android:id="@+id/choose_pineduser_radio_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_radiobutton_choose_pineduser"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/search" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/choose_pineduser_inputbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/choose_pineduser_input_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@null"
            android:src="@drawable/selector_btn_search" />

        <EditText
            android:id="@+id/choose_pineduser_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/choose_pineduser_input_search"
            android:background="@null"
            android:hint="@string/hint_username"
            android:singleLine="true" />
    </RelativeLayout>

    <ListView
        android:id="@+id/choose_pineduser_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>